[package]
name = "fetch-sac"
version = "0.6.0"
edition = "2021"
authors = ["Ollivier Robert <ollivier.robert@eurocontrol.int>"]
description = "Fetch the official list of SAC codes from ASTERIX site."
readme = "README.md"
license = "MIT"
repository = "https://github.com/keltia/fetch-sac"
categories = ["aerospace"]
keywords = ["sac", "asterix", "aeronautical-data"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["cargo", "derive"] }
csv = "1.2.1"
log = { version = "0.4", features = ["serde", "std"] }
nom = "7.1.3"
regex = "1.7"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.95", features = ["preserve_order"] }
stderrlog = "0.5.4"

[dev-dependencies]
rstest = "0.17.0"
